// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AI assistant > reports status publicly 1`] = `
{
  "body": {
    "data": {
      "enabled": "boolean",
    },
    "success": "boolean",
  },
  "status": 200,
}
`;

exports[`AI assistant — streaming, feedback and staff review (Phase C) > shows usage and the answer log to KKF staff only 1`] = `
{
  "body": {
    "data": {
      "capUsd": "number",
      "capped": "boolean",
      "enabled": "boolean",
      "helpful": "number",
      "month": "string",
      "notHelpful": "number",
      "outcomes": {},
      "publicSpendUsd": "number",
      "questions": "number",
      "spendUsd": "number",
      "staffSpendUsd": "number",
    },
    "success": "boolean",
  },
  "status": 200,
}
`;

exports[`AI assistant — streaming, feedback and staff review (Phase C) > validates feedback 1`] = `
{
  "body": {
    "error": "string",
    "success": "boolean",
  },
  "status": 404,
}
`;
